Add memory usage tracking